# mktemp-rs

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: lib.rs  temp_dir.rs  temp_file.rs
tests/: dir_invalid_utf8.rs  file_invalid_utf8.rs  readme.rs  temp_dir.rs  temp_file.rs
